src/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>Boolean_Response__c</fullName>
        <label>Boolean Response</label>
        <picklist>
            <picklistValues>
                <fullName>true</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>false</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>Learning_Assignment__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Response__c</fullName>
        <label>Number Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <formula>TEXT(Question__r.Type__c)</formula>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Answer_Sequence_Label__c</fullName>
        <label>Response Answer Sequence Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Answer_Sequence_Long__c</fullName>
        <label>Response Answer Sequence Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Answer_Sequence__c</fullName>
        <label>Response Answer Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Text_Long__c</fullName>
        <label>Response Text Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Text__c</fullName>
        <label>Response Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shared_Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Learning Assignment</label>
        <referenceTo>Shared_Learning_Assignment__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correct_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Response</label>
        <type>Checkbox</type>
    </fields>
    <label>Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Learning_Assignment__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>